--- a/ece325_lab_assignment6/.project
+++ b/ece325_lab_assignment6/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Lab3Redo</name>
+	<name>ece325_lab_assignment6</name>
 	<comment></comment>
 	<projects>
 	</projects>
